add comment and tag dao, modify PostService